@@ -135,7 +135,7 @@ sub htmlBrowseHist {
        end;
        td class => 'tc4';
         a href => $revurl, title => $i->{ioriginal}, shorten $i->{ititle}, 80;
-        b class => 'grayedout'; lit bb2html $i->{comments}, 250; end;
+        b class => 'grayedout'; lit bb2html $i->{comments}, 150; end;
        end;
       end;
     },
